--- a/css/timelineItem.css
+++ b/css/timelineItem.css
@@ -64,8 +64,24 @@ div.timeline-axis-text {
 	color: #606060;
 	padding: 3px;
 	white-space: nowrap;
-	font-size: 0.80em;
+	font-size: 0.90em;
 	margin-left: -15px;
 	margin-top: 10px;
 	font-weight: 600;
+}
+
+/* */
+div.timeline-event-dot {
+	border-style: solid;
+	border-width: 3px;
+	border-radius: 3px;
+	-moz-border-radius: 3px;
+}
+
+div.timeline-event-box {
+text-align: center;
+border-style: solid;
+border-width: 1px;
+border-radius: 4px;
+-moz-border-radius: 4px;
 }
