--- a/css/layout.css
+++ b/css/layout.css
@@ -4,13 +4,39 @@ html, body {
 	margin: 0;
 	padding: 0;
 	font-family: 'Open Sans', sans-serif;
-	color: #666666;
+	/*font-family: 'open_sansregular', sans-serif;*/
+	color: #333;
 	font-size: 1.0em;
 }
 
 body {
 	overflow: hidden;
 }
+
+/*
+ * Open-Sans Font
+ */
+/*@font-face {
+	font-family: 'open_sansregular';
+	src: url('../fonts/OpenSans-Regular-webfont.eot');
+	src: url('../fonts/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/OpenSans-Regular-webfont.woff') format('woff'),
+		url('../fonts/OpenSans-Regular-webfont.ttf') format('truetype'),
+		url('../fonts/OpenSans-Regular-webfont.svg#open_sansregular') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'open_sanssemibold';
+	src: url('../fonts/OpenSans-Semibold-webfont.eot');
+	src: url('../fonts/OpenSans-Semibold-webfont.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/OpenSans-Semibold-webfont.woff') format('woff'),
+		url('../fonts/OpenSans-Semibold-webfont.ttf') format('truetype'),
+		url('../fonts/OpenSans-Semibold-webfont.svg#open_sanssemibold') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}*/
 
 /* ------ main window ------ */
 #main-window {
@@ -24,6 +50,7 @@ body {
 	margin: 0;
 	overflow: hidden;
 	background-color: rgb(8, 68, 0);
+	/*background: #000 url(img/blue_black.jpg) 178px 0px no-repeat;*/
 }
 
 .header-title {
