--- a/css/main.css
+++ b/css/main.css
@@ -250,3 +250,17 @@ body {
 	width:150px;
 	height:30px;
 }
+
+/* Messages */
+.step-two {
+	position: absolute;
+	bottom: 235px;
+	display: none;
+}
+
+.step-two-message {
+	position: absolute;
+	bottom: 245px;
+	margin-left: 40px;
+	display: none;
+}
